# wazuh-cert-oauth2

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  SECURITY.md  checksums.sha256  cliff.toml  compose.yaml  deny.toml  index.yaml  next-steps-for-desmond.md  text  trivy.yaml
.docker/keycloak_config/: realm.json
.docker/nginx-sidecar/: Dockerfile  entrypoint.sh  fetch-crl.sh  nginx.conf.template
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build-nginx-sidecar.yml  build.yml  ci.yml  helm-publish.yml  lint-codebase.yml  release.yml  scripts.yaml  test-script.yml
charts/wazuh-cert-server/: Chart.yaml  values-alb.yaml  values-pvc.yaml  values-s3-backup.yaml  values.yaml
charts/wazuh-cert-webhook/: Chart.yaml  values-pvc.yaml  values.yaml
crates/wazuh-cert-oauth2-client/: Cargo.toml  README.md
crates/wazuh-cert-oauth2-client/src/: flow.rs  main.rs
crates/wazuh-cert-oauth2-client/src/services/: agent_name.rs  generate_csr.rs  get_token.rs  get_user_keys.rs  mod.rs  restart_agent.rs  save_to_file.rs  set_name.rs  stop_agent.rs  submit_csr.rs
crates/wazuh-cert-oauth2-client/src/shared/: cli.rs  mod.rs  path.rs  sed_command.rs
crates/wazuh-cert-oauth2-healthcheck/: Cargo.toml
crates/wazuh-cert-oauth2-healthcheck/src/: main.rs
crates/wazuh-cert-oauth2-metrics/: Cargo.toml
crates/wazuh-cert-oauth2-metrics/src/: lib.rs
crates/wazuh-cert-oauth2-model/: Cargo.toml  README.md
crates/wazuh-cert-oauth2-model/src/: lib.rs
crates/wazuh-cert-oauth2-model/src/models/: claims.rs  document.rs  errors.rs  ledger_entry.rs  mod.rs  revoke_request.rs  sign_csr_request.rs  signed_cert_response.rs
crates/wazuh-cert-oauth2-model/src/services/: fetch_only.rs  http_client.rs  jwks.rs  logging.rs  mod.rs  otel.rs  wazuh.rs
crates/wazuh-cert-oauth2-server/: Cargo.toml  README.md  Rocket.toml
crates/wazuh-cert-oauth2-server/src/: main.rs  tracing_fairing.rs
crates/wazuh-cert-oauth2-server/src/handlers/: crl.rs  crl_fairing.rs  health.rs  ledger.rs  middle.rs  mod.rs  register_agent.rs  revoke.rs
crates/wazuh-cert-oauth2-server/src/models/: ca_config.rs  health.rs  mod.rs  oidc_state.rs
crates/wazuh-cert-oauth2-server/src/shared/: certs.rs  crl.rs  ledger.rs  mod.rs  opts.rs  webhook_notifier.rs
crates/wazuh-cert-oauth2-server/src/shared/certs/: build_base.rs  extensions.rs  mod.rs  policy.rs  sign.rs
crates/wazuh-cert-oauth2-server/src/shared/crl/: ffi.rs  mod.rs  worker.rs
crates/wazuh-cert-oauth2-server/src/shared/ledger/: commands.rs  csv.rs  csv_utils.rs  loader.rs  mod.rs  types.rs  worker.rs
crates/wazuh-cert-oauth2-webhook/: Cargo.toml  README.md  Rocket.toml
crates/wazuh-cert-oauth2-webhook/src/: bootstrap.rs  main.rs  models.rs  opts.rs  state.rs  tracing_fairing.rs
crates/wazuh-cert-oauth2-webhook/src/adapters/: mod.rs
crates/wazuh-cert-oauth2-webhook/src/adapters/auth/: default.rs  google.rs  mod.rs
crates/wazuh-cert-oauth2-webhook/src/adapters/idp/: ferriskey.rs  google.rs  keycloak.rs  mod.rs
crates/wazuh-cert-oauth2-webhook/src/handlers/: auth.rs  enrollment.rs  evict.rs  health.rs  mod.rs  webhook.rs  webhook_util.rs
crates/wazuh-cert-oauth2-webhook/src/ports/: idp.rs  mod.rs  utils.rs  webhook_auth.rs
crates/wazuh-cert-oauth2-webhook/src/state/: audit.rs  builder.rs  core.rs  mod.rs  oauth.rs  spool.rs  utils.rs  wazuh_api.rs
docker/nginx-sidecar/: Dockerfile
docs/: architecture.md  getting-started.md  test-plan-feat-improvements.md
docs/roadmaps/: roadmap.md
helm/: Chart.yaml  values-efs.yaml  values.yaml
helm/templates/: NOTES.txt  _annotations.tpl  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
scripts/: delete-cert.sh  install.ps1  install.sh  uninstall.sh  update-crl.ps1  update-crl.sh
scripts/linux/: delete-cert.sh  install.sh  uninstall.sh
scripts/macos/: delete-cert.sh  install.sh  uninstall.sh
scripts/ops/: migrate-ledger.sh
scripts/shared/: common.ps1  common.sh  utils.ps1  utils.sh
scripts/tests/: README.md  test-script.bats
scripts/tests/alpine/: Dockerfile
scripts/tests/debian/: Dockerfile
scripts/tests/ubuntu/: Dockerfile
scripts/windows/: delete-cert.cmd  delete-cert.ps1  install.ps1  uninstall.ps1  update-crl.ps1
src/: errors.rs
src/models/: jwks_state.rs  register_agent_dto.rs
src/shared/: mod.rs
wazuh-cert-oauth2/: .env  Cargo.toml  Dockerfile
wazuh-cert-oauth2-client/: Cargo.toml  sslagent.cert  sslagent.key
wazuh-cert-oauth2-client/src/: cli.rs  main.rs
wazuh-cert-oauth2-client/src/command/: linux.rs  macos.rs  mod.rs  windows.rs
wazuh-cert-oauth2-client/src/services/: get_token.rs  get_user_keys.rs  mod.rs  restart_agent.rs  save_to_file.rs  set_name.rs  stop_agent.rs
wazuh-cert-oauth2-client/src/shared/: cli.rs  constants.rs  errors.rs  mod.rs  path.rs  sed_command.rs
wazuh-cert-oauth2-model/: Cargo.toml
wazuh-cert-oauth2-model/src/: lib.rs
wazuh-cert-oauth2-model/src/models/: claims.rs  document.rs  errors.rs  mod.rs  register_agent_dto.rs  sign_csr_request.rs  user_key.rs
wazuh-cert-oauth2-model/src/services/: fetch_only.rs  jwks.rs  mod.rs
wazuh-cert-oauth2/src/: errors.rs  main.rs
wazuh-cert-oauth2/src/handlers/: health.rs  middle.rs  mod.rs  register_agent.rs
wazuh-cert-oauth2/src/models/: claims.rs  mod.rs
wazuh-cert-oauth2/src/shared/: certs.rs  jwks.rs  mod.rs
