[workspace]
members = [
    "crates/wazuh-cert-oauth2-server",
    "crates/wazuh-cert-oauth2-client",
    "crates/wazuh-cert-oauth2-model",
    "crates/wazuh-cert-oauth2-webhook",
    "crates/wazuh-cert-oauth2-metrics",
    "crates/wazuh-cert-oauth2-healthcheck"
]
resolver = "3"

[workspace.dependencies]
wazuh-cert-oauth2-model = { path = "crates/wazuh-cert-oauth2-model" }
wazuh-cert-oauth2-metrics = { path = "crates/wazuh-cert-oauth2-metrics" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "9" }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing", "net", "process", "fs"] }
thiserror = "2"
anyhow = "1"
once_cell = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "brotli", "deflate"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0"
openssl = { version = "0"}
rand = "0.9"
rand_core = "0.9"
rocket = { version = "0", features = ["tls", "json", "mtls", "serde_json"] }
diacritics = "0"
mid = "4"
oauth2 = { version = "5", features = ["reqwest"] }
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
url = "2"

openssl-sys = "0"
foreign-types = "0"

opentelemetry = { version = "0.30" }
opentelemetry-otlp = { version = "0.30", features = ["tokio", "metrics", "trace", "grpc-tonic", "gzip-tonic", "tls", "serialize"] }
opentelemetry_sdk = { version = "0.30", features = ["tokio", "metrics", "rt-tokio", "trace"] }
tracing-opentelemetry = { version = "0.31" }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "serde", "serde_json", "json", "ansi", "chrono", "local-time", "time", "tracing"] }
tracing = { version = "0", features = ["attributes", "async-await", "std"] }
prometheus = { version = "0" }

mimalloc = "0"

[profile.prod]
inherits = "release"
lto = true
opt-level = "z"
codegen-units = 1
incremental = false
strip = true

[workspace.package]
version = "0.2.23-rc.1"
edition = "2024"
license = "MIT"
publish = false
authors = [
    "Stephane Segning <selastlambou@gmail.com>"
]
