[workspace]
members = [
    "crates/wazuh-cert-oauth2-server",
    "crates/wazuh-cert-oauth2-client",
    "crates/wazuh-cert-oauth2-model",
    "crates/wazuh-cert-oauth2-webhook",
    "crates/wazuh-cert-oauth2-healthcheck"
]
resolver = "3"

[workspace.dependencies]
wazuh-cert-oauth2-model = { path = "crates/wazuh-cert-oauth2-model" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "tracing", "net", "process", "fs"] }
thiserror = "2"
anyhow = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "http2", "gzip", "brotli", "deflate"] }
log = { version = "0.4", features = ["std"] }
env_logger = "0"
openssl = { version = "0"}
rand = "0.9"
rand_core = "0.10"
rocket = { version = "0", features = ["tls", "json", "mtls", "serde_json"] }
diacritics = "0"
mid = "4"
oauth2 = { version = "5", features = ["reqwest"] }
clap = { version = "4", features = ["derive", "env"] }
base64 = "0.22"
url = "2"

openssl-sys = "0"
foreign-types = "0"

tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing = { version = "0", features = ["attributes", "async-await", "std"] }

mimalloc = "0"

[profile.prod]
inherits = "release"
lto = true
opt-level = "z"
codegen-units = 1
incremental = false
strip = true

[workspace.package]
version = "0.4.2"
edition = "2024"
license = "MIT"
publish = false
authors = [
    "Stephane Segning <selastlambou@gmail.com>"
]
