[package]
name = "wazuh-cert-oauth2-client"
version = "0.2.11"
edition = "2021"

[dependencies]
tokio = { version = "1.38.1", features = ["windows-sys", "macros", "rt-multi-thread", "fs", "process"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
log = "0.4.22"
env_logger = "0.11.3"
structopt = "0"
oauth2 = "4.4.2"
reqwest = { version = "0", features = ["json"] }
wazuh-cert-oauth2-model = { path = "../wazuh-cert-oauth2-model" }
openssl = { version = "0.10.66", features = ["vendored"] }
mid = "3.0.0"
local-ip-address = "0.6.3"
rand = "0.8.5"
diacritics = "0.2.2"