[package]
name = "wazuh-cert-oauth2-client"
version = "0.2.19"
edition = "2021"

[dependencies]
tokio = { version = "1.45.1", features = ["windows-sys", "macros", "rt-multi-thread", "fs", "process"] }
anyhow = "1.0.98"
log = "0.4.27"
env_logger = "0.11.8"
structopt = "0"
oauth2 = { version = "5" }
reqwest = { version = "0.12", features = ["json"] }
wazuh-cert-oauth2-model = { path = "../wazuh-cert-oauth2-model" }
mid = "3.0.2"
rand = "0.9.1"
diacritics = "0.2.2"


[profile.prod]
inherits = "release"
lto = true
opt-level = "z"
codegen-units = 1
strip = true