[package]
name = "wazuh-cert-oauth2-model"
version = "0.2.6"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
jsonwebtoken = "9.3.0"
reqwest = { version = "0", features = ["json"] }
log = "0.4.22"
tokio = { version = "1.40.0" }