[package]
name = "wazuh-cert-oauth2-model"
version = "0.2.19"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
thiserror = "2.0.12"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.19", features = ["json"] }
log = "0.4.27"