[package]
name = "wazuh-cert-oauth2"
version = "0.2.7"
edition = "2021"

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
anyhow = "1.0.86"
thiserror = { version = "1.0.63" }
log = "0.4.22"
env_logger = "0.11.5"
rocket = { version = "0.5.1", features = ["tls", "json", "http2", "uuid"] }
reqwest = { version = "0.12.8", features = ["json", "gzip"] }
jsonwebtoken = "9.3.0"
openssl = { version = "0.10.66", features = ["vendored", "bindgen"] }
rand = "0.8.5"
wazuh-cert-oauth2-model = { path = "../wazuh-cert-oauth2-model" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[default.tls]
certs = "/usr/share/wazuh-cert-oauth2/certs/cert.pem"
key = "/usr/share/wazuh-cert-oauth2/certs/key.pem"