[package]
name = "wazuh-cert-oauth2-healthcheck"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
reqwest.workspace = true
env_logger.workspace = true
log.workspace = true
clap.workspace = true
