[package]
name = "wazuh-cert-oauth2-healthcheck"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
reqwest.workspace = true
env_logger.workspace = true
log.workspace = true
clap.workspace = true

[dependencies.tokio]
workspace = true
features = ["rt"]
