[package]
name = "wazuh-cert-oauth2-model"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
log.workspace = true
rocket.workspace = true

[features]
rocket = []