[package]
name = "wazuh-cert-oauth2-model"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
reqwest.workspace = true
tracing.workspace = true
rocket.workspace = true
oauth2.workspace = true
clap.workspace = true
url.workspace = true
rand_core.workspace = true

[dependencies.prometheus]
workspace = true
optional = true

[dependencies.opentelemetry]
workspace = true
optional = true

[dependencies.opentelemetry_sdk]
workspace = true
optional = true

[dependencies.opentelemetry-otlp]
workspace = true
optional = true

[dependencies.tracing-opentelemetry]
workspace = true
optional = true

[dependencies.tracing-subscriber]
workspace = true
optional = true

[dependencies.openssl]
workspace = true
optional = true

[features]
rocket = [
    "prometheus",
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "tracing-subscriber"
]