[package]
name = "wazuh-cert-oauth2-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
env_logger.workspace = true
rocket.workspace = true
jsonwebtoken.workspace = true
openssl.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
mimalloc.workspace = true
clap.workspace = true
log = "0.4.28"
openssl-sys = "0.9"
foreign-types = "0.3"


[dependencies.wazuh-cert-oauth2-model]
features = ["rocket"]
workspace = true
