[package]
name = "wazuh-cert-oauth2-server"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
rocket.workspace = true
jsonwebtoken.workspace = true
openssl.workspace = true
rand.workspace = true
serde.workspace = true
mimalloc.workspace = true
clap.workspace = true
openssl-sys.workspace = true
foreign-types.workspace = true

[dependencies.wazuh-cert-oauth2-model]
features = ["rocket", "openssl"]
workspace = true

[dependencies.wazuh-cert-oauth2-metrics]
workspace = true
