[package]
name = "wazuh-cert-oauth2-webhook"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
rocket.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
oauth2.workspace = true
mimalloc.workspace = true
rand.workspace = true
base64.workspace = true

[dependencies.wazuh-cert-oauth2-model]
workspace = true
features = ["rocket"]

[dependencies.wazuh-cert-oauth2-metrics]
workspace = true
